--- a/cn.zh-CN/产品定价/计费说明.md
+++ b/cn.zh-CN/产品定价/计费说明.md
@@ -1,125 +1,46 @@
 # 计费说明 {#concept_ft2_rwx_b2b .concept}
 
-## 共享流量包的区域划分 {#section_akx_swx_b2b .section}
+## 区域划分 {#section_hzh_4h1_vfb .section}
 
-一个共享流量包可以覆盖一个大的区域，包含一个或多个地域（Region\)，并且有不同的套餐规格。
+一个流量包覆盖一个区域，一个区域包含一个或多个地域。每个区域的套餐规格也不同。
 
-|共享流量包区域|覆盖的地域|
-|:------|:----|
-|亚太区域（不含悉尼、东京）|华东1（杭州），华东2（上海），华南1（深圳），华北1（青岛），华北2（北京），华北3（张家口），亚太东南1（新加坡）， 香港，马来西亚（吉隆坡）、印度尼西亚（雅加达），印度（孟买）|
-|欧美区域|美国东部1（弗吉尼亚），美国西部1（硅谷），欧洲中部1（法兰克福）|
+|流量包区域|覆盖的地域|
+|:----|:----|
+|大陆通用|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华东1（杭州）、华东2（上海）、华南1（深圳）|
+|海外|澳大利亚（悉尼）、美国（弗吉尼亚）、美国（硅谷）、德国（法兰克福）、 新加坡、马来西亚（吉隆坡）、印度（孟买）|
+|香港通用|香港|
 
-共享流量包产品不覆盖亚太东南2（澳大利亚）、亚太东北1（日本）、中东东部1（迪拜）地域。
+## 定价 {#section_ogn_452_5fb .section}
 
-## 共享流量包的套餐规格 {#section_zd3_2xx_b2b .section}
+下表的套餐规格和价格仅供参考，具体信息以[购买界面](https://common-buy.aliyun.com/?&commodityCode=flowbag#/buy)为准。
 
-月包
+|规格（GB）|单价（美元/月）|
+|:-----|:-------|
+|50|5.8|
+|512|55.0|
+|1,024|105.0|
+|2,048|209.0|
+|3,072|299.0|
+|4,096|399.0|
+|5,120|479.0|
 
-|共享流量包区域|套餐规格|
-|:------|:---|
-|亚太区域-全时|10GB，50GB，128GB，512GB，1TB，5TB，10TB，50TB|
-|亚太区域-闲时|10GB，512GB，1TB，5TB，10TB，50TB|
-|欧美区域-全时|10GB，50GB，128GB，512GB，1TB，5TB，10TB，50TB|
+|规格（GB）|单价（美元/月）|
+|:-----|:-------|
+|50|5.8|
+|512|55.0|
+|1,024|105.0|
+|2,048|209.0|
+|3,072|299.0|
+|4,096|399.0|
+|5,120|479.0|
 
-半年包
-
-|共享流量包区域|套餐规格|
-|:------|:---|
-|亚太区域|60GB，300GB，600GB，3TB，6TB，30TB，60TB，300TB|
-|亚太区域-闲时|3TB，6TB，30TB，60TB，300TB|
-|欧美区域|60GB，300GB，600GB，3TB，6TB，30TB，60TB，300TB|
-
-## 共享流量包的套餐价格 {#section_qsr_lxx_b2b .section}
-
--   下表的套餐规格和价格仅供参考，具体信息以[购买界面](https://common-buy.aliyun.com/?&commodityCode=flowbag#/buy)为准。
--   每个账号每月限购10个流量包。
--   多个流量包共存时，按到期时间顺序进行抵扣。哪个流量包先到期，将先被抵扣。比如第一个购买的流量包是半年包，2018年6月1日到期。第二个购买的流量包是月包，2018年2月1日到期。由于第二个共享流量包先到期，所以会优先抵扣第二个流量包的流量。
-
-    **说明：** 如果到期时间相同，资源包ID字母排序靠前的优先抵扣。
-
-
-亚太通用-全时套餐-月包
-
-**说明：** 1 TB=1024 GB, 5 TB=5120 GB
-
-|规格|亚太区域价格（元）|最高节省成本（元）|
-|:-|:--------|:--------|
-|10 GB|7.5|2.5|
-|50 GB|37|13|
-|128 GB|95|33|
-|512 GB|377|135|
-|1 TB|754|270|
-|5 TB|3727|1393|
-|10 TB|7540|2700|
-|50 TB|37270|13930|
-
-亚太通用-闲时套餐-月包
-
-**说明：** 1 TB=1024 GB, 5 TB=5120 GB
-
-|规格|亚太区域价格（元）|最高节省成本（元）|
-|:-|:--------|:--------|
-|10 GB|5.25|4.75|
-|512 GB|263.9|248.1|
-|1 TB|527.8|496.2|
-|5 TB|2608.9|2511.1|
-|10 TB|5278|4962|
-|50 TB|26089|25111|
-
-欧美通用-全时套餐-月包
-
-**说明：** 1 TB=1024 GB, 5 TB=5120 GB
-
-|规格|欧美区域价格（元）|最高节省成本（元）|
-|:-|:--------|:--------|
-|10 GB|4.7|0.3|
-|50 GB|23|2|
-|128 GB|60|4|
-|512 GB|236|20|
-|1 TB|471|41|
-|5 TB|2330|230|
-|10 TB|4710|410|
-|50 TB|23300|2300|
-
-亚太通用-全时套餐-半年包
-
-**说明：** 1TB=1024 GB
-
-|规格|亚太区域价格（元）|最高节省成本（元）|
-|:-|:--------|:--------|
-|60 GB|45|15|
-|300 GB|222|78|
-|600 GB|570|198|
-|3 TB|2262|810|
-|6 TB|4524|1620|
-|30 TB|22362|8358|
-|60 TB|45240|16200|
-|300 TB|3223620|83580|
-
-亚太通用-闲时套餐-半年包
-
-**说明：** 1TB=1024 GB
-
-|规格|亚太区域价格（元）|最高节省成本（元）|
-|:-|:--------|:--------|
-|3 TB|1583.4|1488.6|
-|6 TB|3166.8|2977.2|
-|30 TB|15653.4|15066.6|
-|60 TB|31668|29772|
-|300 TB|156534|150666|
-
-欧美通用-全时套餐-半年包
-
-**说明：** 1TB=1024 GB
-
-|规格|欧美区域价格（元）|最高节省成本（元）|
-|:-|:--------|:--------|
-|60 GB|27.6|2.4|
-|300 GB|138|12|
-|600 GB|281.25|18.75|
-|3 TB|1416|120|
-|6 TB|2826|246|
-|30 TB|13980|1380|
-|60 TB|28260|2460|
-|300 TB|139800|13800|
+|规格（GB）|单价（美元/月）|
+|:-----|:-------|
+|50|3.4|
+|512|33.0|
+|1,024|65.0|
+|2,048|129.0|
+|3,072|189.0|
+|4,096|249.0|
+|5,120|309.0|
 
