--- a/cn.zh-CN/产品简介/产品介绍.md
+++ b/cn.zh-CN/产品简介/产品介绍.md
@@ -1,6 +1,6 @@
 # 产品介绍 {#concept_usr_lsx_b2b .concept}
 
-通用流量包是一款流量套餐产品，使用方便，价格实惠。购买流量包后立刻生效，并自动抵扣按流量计费的云服务器ECS、弹性公网IP（EIP）和负载均衡（SLB）产生的流量，直到流量包用完或到期为止。
+通用流量包是一款流量套餐产品，使用方便，价格实惠。购买流量包后立刻生效，并自动抵扣按流量计费的云服务器ECS、弹性公网IP（EIP）和负载均衡（SLB）、共享带宽产生的流量，直到流量包用完或到期为止。
 
 ## 优势 {#section_lky_xsx_b2b .section}
 
@@ -10,11 +10,11 @@
 
 -   覆盖多款云产品
 
-    流量包中的流量可同时抵扣供按流量计费的ECS、EIP和SLB产生的流量。
+    流量包中的流量可同时抵扣供按流量计费的ECS、EIP、SLB和共享带宽产生的流量。
 
 -   使用简单
 
-    流量包开通后自动覆盖多个地域的产品，并自动抵扣流量费用，无需额外操作。详情参考[购买流量包](../../../../intl.zh-CN/用户指南/购买流量包.md#)。
+    流量包开通后自动覆盖多个地域的产品，并自动抵扣流量费用，无需额外操作。详情参考[购买流量包](../../../../../intl.zh-CN/用户指南/购买流量包.md#)。
 
 -   统一管理
 
@@ -35,5 +35,5 @@
 
 您可以到[资源包管理](https://expense.console.aliyun.com/?#/flow/list/)中查看流量包中的剩余流量和使用明细。
 
-详情参考[查看流量使用情况](../../../../intl.zh-CN/用户指南/查看流量使用情况.md#)。
+详情参考[查看流量使用情况](../../../../../intl.zh-CN/用户指南/查看流量使用情况.md#)。
 
