--- a/cn.zh-CN/常见问题/常见问题.md
+++ b/cn.zh-CN/常见问题/常见问题.md
@@ -1,9 +1,5 @@
 # 常见问题 {#concept_wcp_tby_b2b .concept}
 
-## 共享流量包可提升购买数量配额吗？ {#section_fxb_yby_b2b .section}
-
-无法提升配额，需要合理选择规格。
-
 ## 流量包是先购买先抵扣吗？ {#section_h4k_1cy_b2b .section}
 
 不是。
@@ -16,33 +12,13 @@
 
 不需要。
 
-购买完成后，自动抵扣按流量计费的ECS、EIP、SLB、NAT网关产生的流量。
+购买完成后，自动抵扣按流量计费的ECS、EIP和SLB产生的流量。
 
 ## 流量包可以抵扣按带宽计费的产品产生的流量吗？ {#section_gy4_hcy_b2b .section}
 
 不可以。
 
-流量包只能用于按流量计费的ECS、EIP、SLB和NAT网关产生的流量。
-
-## 共享流量包和共享带宽有什么区别? {#section_ifp_3cy_b2b .section}
-
-它们是完全独立的两个产品：
-
--   面向的客户群不一样
-    -   共享带宽包的客户群一般是中大型客户。
-    -   共享流量包的客户面是覆盖全部用户。
--   功能不一样
-    -   共享流量包是属于预付费的资源包类型的产品，主要特点是通过预付费的方式降低流量的单价，让客户更便宜的使用流量。此外还有超级便宜的闲时流量包。
-    -   共享带宽是一份公网带宽，可以让加入到共享带宽中的EIP复用一份带宽，支持多种按带宽计费方式，如按带宽计费，按增强95计费，按传统95计费。
--   使用方式不一样
-    -   共享流量包使用超简单，购买完成后即可以自动抵扣流量，无需任何配置。
-    -   共享带宽使用稍复杂，需要在共享带宽购买完之后，将EIP加入到共享带宽，才能让EIP使用共享带宽的带宽。
-
-## 闲时流量包会被优先抵扣吗？ {#section_bwb_mcy_b2b .section}
-
-会。
-
-如果同时存在全时流量包和闲时流量包，在闲时00：00-08：00时，闲时流量包会被优先抵扣。
+流量包只能用于按流量计费的ECS、EIP和SLB产生的流量。
 
 ## 流量包可以抵扣在购买界面不包含的区域中的产品产生的流量吗? {#section_rln_ncy_b2b .section}
 
@@ -59,8 +35,6 @@
 ## 流量包使用明细中抵扣记录问题 {#section_dp3_qcy_b2b .section}
 
 在流量包使用明细中的使用时间指的是账单被抵扣的时间，而流量产生的时间一般是这个使用时间前的一个小时。
-
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/14713/15426147576203_zh-CN.png)
 
 ## 使用流量包和弹性公网IP的带宽峰值是多少？ {#section_zmb_vcy_b2b .section}
 
