--- a/cn.zh-CN/产品简介/什么是共享流量包？.md
+++ b/cn.zh-CN/产品简介/什么是共享流量包？.md
@@ -37,7 +37,7 @@
 
 |流量包区域|覆盖的地域|
 |:----|:----|
-|亚太区域|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华东1（杭州）、华东2（上海）、华南1（深圳）、香港、 新加坡、新加坡（吉隆坡）、印度尼西亚（雅加达）、印度（孟买）|
+|亚太区域|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华东1（杭州）、华东2（上海）、华南1（深圳）、中国香港、 新加坡、新加坡（吉隆坡）、印度尼西亚（雅加达）、印度（孟买）|
 |欧美区域|美国（弗吉尼亚）、美国（硅谷）、德国（法兰克福）|
 
 **说明：** 共享流量包不能覆盖亚太东南2（澳大利亚）、亚太东北1（日本）、中东东部1（迪拜）地域。具体信息以购买界面为准。
