--- a/intl.zh-CN/用户指南/购买流量包.md
+++ b/intl.zh-CN/用户指南/购买流量包.md
@@ -9,7 +9,7 @@
     |:----|:----|
     |大陆通用|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华东1（杭州）、华东2（上海）、华南1（深圳）|
     |海外|澳大利亚（悉尼）、美国（弗吉尼亚）、美国（硅谷）、德国（法兰克福）、 新加坡、马来西亚（吉隆坡）、印度（孟买）|
-    |香港通用|香港|
+    |中国香港通用|中国香港|
 
 3.  单击**立即购买**，完成支付。 
 
