--- a/cn.zh-CN/用户指南/购买流量包.md
+++ b/cn.zh-CN/用户指南/购买流量包.md
@@ -1,14 +1,15 @@
 # 购买流量包 {#task_ys4_kzx_b2b .task}
 
-流量包购买后立刻生效，自动抵扣所选区域内的按流量计费的ECS、EIP、NAT网关、SLB和共享带宽的流量。
+流量包购买后立刻生效，自动抵扣所选区域内的按流量计费的ECS、EIP、SLB和共享带宽的流量。
 
-1.  打开[流量包购买页面](https://common-buy.aliyun.com/?spm=0.0.0.0.86FjwI&commodityCode=flowbag#/buy)。 
+1.  打开[流量包购买页面](https://common-buy-intl.aliyun.com/?spm=a3c0i.63574.1167971.3.51cb4705k4PHIy&commodityCode=flowbag_intl&accounttraceid=87c33f86-1d75-451d-a5f8-0b67c0e0135e#/buy)。 
 2.  选择流量包的有效期、规格和区域。 
 
     |流量包区域|覆盖的地域|
     |:----|:----|
-    |亚太区域|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华东1（杭州）、华东2（上海）、华南1（深圳）、香港、 新加坡、新加坡（吉隆坡）、印度尼西亚（雅加达）、印度（孟买）|
-    |欧美区域|美国（弗吉尼亚）、美国（硅谷）、德国（法兰克福）|
+    |大陆通用|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华东1（杭州）、华东2（上海）、华南1（深圳）|
+    |海外|澳大利亚（悉尼）、美国（弗吉尼亚）、美国（硅谷）、德国（法兰克福）、 新加坡、马来西亚（吉隆坡）、印度（孟买）|
+    |中国香港通用|中国香港|
 
 3.  单击**立即购买**，完成支付。 
 
