--- a/intl.zh-CN/.md
+++ b/intl.zh-CN/.md
@@ -1,22 +1,58 @@
-# 网络产品2020双11大促必买爆品清单
+# 网络产品2020双12年终大促必买爆品清单
 
-## 一、网络产品新购升级可领取代金券
+网络产品双12钜惠，大促必买爆品帮您迅速连接云上云下业务。
 
-**活动规则**：领券时间从2020年11月01日开始，用券时间为2020年11月01日至11日。
+## 产品新客首次购买优惠
 
-**点击领取**：[https://www.aliyun.com/1111/network](https://www.aliyun.com/1111/network)（2020年11月01日开始领劵）
+**活动规则**：2020年12月09日至2020年12月31日，首次购买指定规格的网络产品时可享受0.5折起的产品优惠，每个账号仅限1次优惠。本次优惠活动面向企业用户。所有产品均可与上云红包叠加使用。仅弹性公网EIP、负载均衡和NAT网关不可与上云津贴叠加使用。
 
-![爆品](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9208683061/p177159.png)
+|产品|规格限制|时间长度|限制l数量|上云津贴是否可叠加|上云红包是否可叠加|双12折扣率|
+|--|----|----|-----|---------|---------|------|
+|负载均衡|-   简约型Ⅰ和标准型Ⅰ
+-   带宽≤50 Mbps
 
-## 二、产品新客首次购买优惠
+|1~5年|每人1件|否|是|-   简约型Ⅰ：实例9%、带宽70%。
+-   标准型Ⅰ：实例15%、带宽70%。 |
+|NAT网关|小型|1~5年|每人1件|否|是|10%|
+|弹性公网IP|普通BGP带宽≤50 Mbps
 
-**活动规则**：2020年11月01日至2020年11月11日，首次购买指定规格的网络产品时可享受0.1折起的产品优惠，每个账号仅限1次优惠，仅共享流量包、VPN网关、智能接入网关APP版可与官网充值满返代金券叠加使用。
+|1~5年|每人5件|否|是|70%|
+|香港精品带宽≤5 Mbps
 
-![首次购买优惠](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/7938683061/p177167.png)
+|1~5年|不限|是|是|30%|
+|共享流量包|所有规格|不涉及|每人5件|是|是|-   1个月10 Gbps：0.01元
+-   其他：90% |
+|云企业网|跨境或非跨境带宽包：2 Mbps~20 Mbps|-   1~5年
+-   1~11月
 
-## 三、全量客户购买优惠
+|每人5件|否|是|-   年：60%
+-   月：65% |
+|全球加速|-   实例（小型Ⅰ和小型Ⅱ）
+-   基础或跨境带宽包：2 Mbps~20 Mbps
 
-**活动规则**：2020年11月09日至2020年11月11日，产品老客在新购、升级产品时可享受65折起的产品优惠，所有产品可与官网的优惠券叠加使用。
+|1~5年|每人5件|是|是|-   实例：小型Ⅰ5%，小型Ⅱ 30%
+-   基础或跨境带宽包：60% |
+|1~11月|每人5件|是|是|-   实例：小型Ⅰ5%，小型Ⅱ 35%
+-   基础或跨境带宽包：65% |
+|VPN网关|IPSec或SSL：5 Mbps|1~5年|每人5件|是|是|-   实例：带宽为5 Mbps的IPSec或SSL实例的折扣率为25%
+-   带宽：70% |
 
-![全量客户购买优惠](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/7938683061/p177168.png)
+## 全量客户购买优惠
+
+**活动规则**：2020年12月09日至2020年12月31日，产品老客在新购、升级产品时可享受65折起的产品优惠。本次优惠活动面向企业用户。所有产品可与上云津贴叠加使用。
+
+|产品|活动规格|数量限制|周期|上云津贴是否可叠加|双12明线折扣率|
+|--|----|----|--|---------|--------|
+|负载均衡|所有规格|无|1~5年|是|80%|
+|NAT网关|所有规格|无|1~5年|是|65%|
+|弹性公网EIP|普通BGP带宽，所有规格|无|1~5年|是|80%|
+|共享流量包|所有规格|无|不涉及|是|90%|
+|云企业网|跨境或非跨境带宽包：2 Mbps~20 Mbps|无|1~5年|是|75%|
+|无|1~11月|是|80%|
+|全球加速|-   实例：所有规格
+-   基础或跨境带宽包：2 Mbps~20 Mbps
+
+|无|1~5年|是|75%|
+|无|1~11月|是|80%|
+|VPN网关|所有规格|无|1~5年|是|80%|
 
