--- a/cn.zh-CN/产品定价/计费说明.md
+++ b/cn.zh-CN/产品定价/计费说明.md
@@ -1,46 +1,53 @@
-# 计费说明 {#concept_ft2_rwx_b2b .concept}
+# 计费说明
 
-## 区域划分 {#section_hzh_4h1_vfb .section}
+共享流量包的有效期、规格、套餐不同，价格也不同。
 
-一个流量包覆盖一个区域，一个区域包含一个或多个地域。每个区域的套餐规格也不同。
+**说明：** 共享流量包是一款流量套餐产品，会自动抵扣按流量计费的云服务器ECS、弹性公网IP（EIP）、负载均衡（SLB）和NAT网关产生的IPv4流量（不包含EIP精品流量）费用，直到流量包用完或到期为止。
+
+## 区域划分
+
+一个共享流量包覆盖一个区域，一个区域包含一个或多个地域。区域与地域的关系如下表。
 
 |流量包区域|覆盖的地域|
 |:----|:----|
-|大陆通用|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华东1（杭州）、华东2（上海）、华南1（深圳）|
-|海外|澳大利亚（悉尼）、美国（弗吉尼亚）、美国（硅谷）、德国（法兰克福）、 新加坡、马来西亚（吉隆坡）、印度（孟买）|
-|香港通用|香港|
+|亚太全时|华北1（青岛）、华北2（北京）、华北 2（阿里政务云1）、华北3（张家口）、华北5（呼和浩特）、华东1（杭州）、华东2（上海）、华南1（深圳）、西南1（成都）、中国香港、 亚太东南1（新加坡）、亚太东南3（吉隆坡）、亚太东南5（雅加达）、亚太南部1（孟买）|
+|亚太闲时|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华东1（杭州）、华东2（上海）、华南1（深圳）、中国香港、 亚太东南1（新加坡）、亚太东南3（吉隆坡）、亚太东南5（雅加达）、亚太南部1（孟买）不包含：亚太东南2（悉尼）、亚太东北1（东京） |
+|欧美全时|美国东部1（弗吉尼亚）、美国西部1（硅谷）、欧洲中部1（法兰克福）|
 
-## 定价 {#section_ogn_452_5fb .section}
+## 共享流量包的套餐规格
 
-下表的套餐规格和价格仅供参考，具体信息以[购买界面](https://common-buy.aliyun.com/?&commodityCode=flowbag#/buy)为准。
+共享流量包分为月包、半年包和年包，有效期分别为1个月、6个月和1年。共享流量包到期后，不支持退款，到期后未用完的流量将清零，不支持转移到其他流量包。
 
-|规格（GB）|单价（美元/月）|
-|:-----|:-------|
-|50|5.8|
-|512|55.0|
-|1,024|105.0|
-|2,048|209.0|
-|3,072|299.0|
-|4,096|399.0|
-|5,120|479.0|
+共享流量包根据流量抵扣时间分为全时流量包和闲时流量包。
 
-|规格（GB）|单价（美元/月）|
-|:-----|:-------|
-|50|5.8|
-|512|55.0|
-|1,024|105.0|
-|2,048|209.0|
-|3,072|299.0|
-|4,096|399.0|
-|5,120|479.0|
+-   闲时流量包只在闲时（北京时间00:00AM至08:00AM）自动生效，并自动抵扣所覆盖区域下的所有按流量计费的ECS、EIP、SLB和NAT网关产生的流量。
+-   全时流量包在全天24小时可用。如果闲时共享流量包和全时共享流量包同时可用，在闲时优先抵扣闲时共享流量包中的流量，非闲时抵扣全时共享流量包中的流量。
 
-|规格（GB）|单价（美元/月）|
-|:-----|:-------|
-|50|3.4|
-|512|33.0|
-|1,024|65.0|
-|2,048|129.0|
-|3,072|189.0|
-|4,096|249.0|
-|5,120|309.0|
+月包、半年包、年包的套餐规格如下表。
+
+|套餐|流量包规格|
+|:-|:----|
+|亚太全时|10GB、50GB、128GB、512GB、1TB、5TB、10TB、50TB|
+|亚太闲时|10GB、512GB、1TB、5TB、10TB、50TB|
+|欧美全时|10GB、50GB、128GB、512GB、1TB、5TB、10TB、50TB|
+
+|套餐|流量包规格|
+|:-|:----|
+|亚太全时|60GB、300GB、600GB、3TB、6TB、30TB、60TB、300TB|
+|亚太闲时|3TB、6TB、30TB、60TB、300TB|
+|欧美全时|60GB、300GB、600GB、3TB、6TB、30TB、60TB、300TB|
+
+|套餐|流量包规格|
+|:-|:----|
+|亚太全时|1TB、10TB、100TB、1PB|
+|亚太闲时|1TB、10TB、100TB、1PB|
+|欧美全时|1TB、10TB、100TB、1PB|
+
+## 共享流量包的套餐价格
+
+共享流量包的套餐价格，请以[购买页面](https://common-buy.aliyun.com/?&commodityCode=flowbag#/buy)为准。
+
+## 退款说明
+
+如果业务需求变更不再使用，您可以退订共享流量包，申请退款。具体退款规则，请参见[退款规则及退款流程](https://help.aliyun.com/document_detail/37096.html)。
 
