--- a/intl.zh-CN/用户指南/购买流量包.md
+++ b/intl.zh-CN/用户指南/购买流量包.md
@@ -1,15 +1,33 @@
-# 购买流量包 {#task_ys4_kzx_b2b .task}
+# 购买流量包
 
-流量包购买后立刻生效，自动抵扣所选区域内的按流量计费的ECS、EIP、SLB和共享带宽的流量。
+通用流量包是一款流量套餐产品，使用方便，价格实惠。购买通用流量包后立刻生效，并自动抵扣按流量计费的云服务器ECS、弹性公网IP（EIP）、负载均衡（SLB）和共享带宽产生的IPv4普通流量（不包含EIP精品流量）费用，直到流量包用完或到期为止。
 
-1.  打开[流量包购买页面](https://common-buy-intl.aliyun.com/?spm=a3c0i.63574.1167971.3.51cb4705k4PHIy&commodityCode=flowbag_intl&accounttraceid=87c33f86-1d75-451d-a5f8-0b67c0e0135e#/buy)。 
-2.  选择流量包的有效期、规格和区域。 
+购买流量包前，请先了解：
 
-    |流量包区域|覆盖的地域|
-    |:----|:----|
-    |大陆通用|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华东1（杭州）、华东2（上海）、华南1（深圳）|
-    |海外|澳大利亚（悉尼）、美国（弗吉尼亚）、美国（硅谷）、德国（法兰克福）、 新加坡、马来西亚（吉隆坡）、印度（孟买）|
-    |中国香港通用|中国香港|
+-   每个账号最多可持有70个未到期的流量包，无法提升配额，请合理选择流量包规格。
+-   流量包套餐的区域不同，所覆盖的地域也不同。区域与地域的关系如下表所示。
 
-3.  单击**立即购买**，完成支付。 
+|流量包区域|覆盖的地域|
+|:----|:----|
+|大陆通用|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华东1（杭州）、华东2（上海）、华南1（深圳）|
+|香港通用|中国香港|
+|海外通用|澳大利亚（悉尼）、美国（弗吉尼亚）、美国（硅谷）、德国（法兰克福）、 新加坡、马来西亚（吉隆坡）、印度（孟买）、英国（伦敦）|
+
+1.  登录[共享流量包购买页面](https://common-buy-intl.aliyun.com/?spm=a3c0i.63574.1167971.3.51cb4705k4PHIy&commodityCode=flowbag_intl&accounttraceid=87c33f86-1d75-451d-a5f8-0b67c0e0135e#/buy)。
+
+2.  在购买页面，根据以下信息配置流量包。
+
+    |配置|说明|
+    |--|--|
+    |**流量包规格**|选择流量包的规格。 流量包的有效期不同，可选择的流量包规格也不同，具体以购买页面为准。 |
+    |**套餐**|选择流量包的套餐。     -   **大陆通用**：流量包覆盖中国内地区域。
+    -   **香港通用**：流量包覆盖中国香港区域。
+    -   **海外通用**：流量包覆盖海外区域。 |
+    |**有效期**|选择流量包的有效期。     -   **1个月**
+    -   **1年**
+ 流量包到期后，不支持退款，到期后未用完的流量将清零，也不支持转移到其他流量包。 |
+    |**购买数量**|选择购买流量包的数量。|
+
+3.  单击**立即购买**，完成支付。
+
 
