--- a/intl.en-US/.md
+++ b/intl.en-US/.md
@@ -27,7 +27,7 @@ Each data transfer plan covers an area and the area covers one or more regions. 
 
 |Area|Region|
 |:---|:-----|
-|Mainland China|China \(Qingdao\), China \(Beijing\), China \(Zhangjiakou-Beijing Winter Olympics\), China \(Hohhot\), China \(Hangzhou\), China \(Shanghai\), and China \(Shenzhen\)|
-|Regions outside mainland China|Australia \(Sydney\), US \(Virginia\), US \(Silicon Valley\), Germany \(Frankfurt\), Singapore, Malaysia \(Kuala Lumpur\), India \(Mumbai\), and UK \(London\)|
+|China Mainland|China \(Qingdao\), China \(Beijing\), China \(Zhangjiakou-Beijing Winter Olympics\), China \(Hohhot\), China \(Hangzhou\), China \(Shanghai\), and China \(Shenzhen\)|
+|Overseas|Australia \(Sydney\), US \(Virginia\), US \(Silicon Valley\), Germany \(Frankfurt\), Singapore, Malaysia \(Kuala Lumpur\), India \(Mumbai\), UK \(London\), and Indonesia \(Jakarta\).|
 |China \(Hong Kong\)|China \(Hong Kong\)|
 
