--- a/cn.zh-CN/.md
+++ b/cn.zh-CN/.md
@@ -1,8 +1,6 @@
 # 什么是共享流量包
 
-共享流量包是一款流量套餐产品，使用方便，价格实惠。购买共享流量包后立刻生效，并自动抵扣按流量计费的云服务器ECS、弹性公网IP（EIP）、负载均衡（SLB）和NAT网关产生的IPv4流量（不包含EIP精品流量）费用，直到流量包用完或到期为止。
-
-**说明：** 2017年7月17日起，每个首次购买共享流量包产品的用户，均有一次免费领取10GB规格共享流量包的机会。领取[免费流量包](https://common-buy.aliyun.com/?&commodityCode=flowbag#/buy)。
+共享流量包是一款流量套餐产品，使用方便，价格实惠。购买后共享流量包立刻生效，并自动抵扣按流量计费的云服务器ECS、弹性公网IP（EIP）、负载均衡（SLB）和NAT网关产生的IPv4流量（不包含EIP精品流量）费用，直到流量包用完或到期为止。
 
 ## 产品优势
 
@@ -10,8 +8,8 @@
 
     流量包的套餐流量价格实惠，性价比高。
 
-    -   每个用户限领一个[免费10GB流量包](https://common-buy.aliyun.com/?&commodityCode=flowbag#/buy)，可自动抵扣按流量计费的ECS、EIP、SLB和NAT网关产生的流量费用。
-    -   共享流量包规格越大，优惠折扣力度越大。
+    -   每个首次购买共享流量包产品的用户，均可免费领取一次10 GB规格的共享流量包：[免费10GB流量包](https://common-buy.aliyun.com/?&commodityCode=flowbag#/buy)。
+    -   共享流量包规格越大，优惠越多。
 -   覆盖多款云产品
 
     流量包中的流量可同时抵扣按流量计费的ECS、EIP、SLB和NAT网关产生的流量。
