--- a/intl.zh-CN/.md
+++ b/intl.zh-CN/.md
@@ -1,58 +1,33 @@
-# 网络产品2020双12年终大促必买爆品清单
+# 什么是共享流量包
 
-网络产品双12钜惠，大促必买爆品帮您迅速连接云上云下业务。
+通用流量包是一款流量套餐产品，使用方便，价格实惠。购买后通用流量包立刻生效，并自动抵扣按流量计费的云服务器ECS、弹性公网IP（EIP）、负载均衡（SLB）和共享带宽产生的IPv4普通流量（不包含EIP精品流量）费用，直到流量包用完或到期为止。
 
-## 产品新客首次购买优惠
+## 产品优势
 
-**活动规则**：2020年12月09日至2020年12月31日，首次购买指定规格的网络产品时可享受0.5折起的产品优惠，每个账号仅限1次优惠。本次优惠活动面向企业用户。所有产品均可与上云红包叠加使用。仅弹性公网EIP、负载均衡和NAT网关不可与上云津贴叠加使用。
+-   价格实惠
 
-|产品|规格限制|时间长度|限制l数量|上云津贴是否可叠加|上云红包是否可叠加|双12折扣率|
-|--|----|----|-----|---------|---------|------|
-|负载均衡|-   简约型Ⅰ和标准型Ⅰ
--   带宽≤50 Mbps
+    流量包的套餐流量价格实惠，性价比高。
 
-|1~5年|每人1件|否|是|-   简约型Ⅰ：实例9%、带宽70%。
--   标准型Ⅰ：实例15%、带宽70%。 |
-|NAT网关|小型|1~5年|每人1件|否|是|10%|
-|弹性公网IP|普通BGP带宽≤50 Mbps
+-   覆盖多款云产品
 
-|1~5年|每人5件|否|是|70%|
-|香港精品带宽≤5 Mbps
+    流量包中的流量可同时抵扣供按流量计费的ECS、EIP、SLB和共享带宽产生的流量。
 
-|1~5年|不限|是|是|30%|
-|共享流量包|所有规格|不涉及|每人5件|是|是|-   1个月10 Gbps：0.01元
--   其他：90% |
-|云企业网|跨境或非跨境带宽包：2 Mbps~20 Mbps|-   1~5年
--   1~11月
+-   使用简单
 
-|每人5件|否|是|-   年：60%
--   月：65% |
-|全球加速|-   实例（小型Ⅰ和小型Ⅱ）
--   基础或跨境带宽包：2 Mbps~20 Mbps
+    流量包开通后自动覆盖多个地域的产品，并自动抵扣流量费用，无需额外操作。详细信息，请参见[购买流量包](/intl.zh-CN/用户指南/购买流量包.md)。
 
-|1~5年|每人5件|是|是|-   实例：小型Ⅰ5%，小型Ⅱ 30%
--   基础或跨境带宽包：60% |
-|1~11月|每人5件|是|是|-   实例：小型Ⅰ5%，小型Ⅱ 35%
--   基础或跨境带宽包：65% |
-|VPN网关|IPSec或SSL：5 Mbps|1~5年|每人5件|是|是|-   实例：带宽为5 Mbps的IPSec或SSL实例的折扣率为25%
--   带宽：70% |
+-   统一管理
 
-## 全量客户购买优惠
+    通过流量包中流量消耗量可轻松汇总公网流量整体使用情况。
 
-**活动规则**：2020年12月09日至2020年12月31日，产品老客在新购、升级产品时可享受65折起的产品优惠。本次优惠活动面向企业用户。所有产品可与上云津贴叠加使用。
 
-|产品|活动规格|数量限制|周期|上云津贴是否可叠加|双12明线折扣率|
-|--|----|----|--|---------|--------|
-|负载均衡|所有规格|无|1~5年|是|80%|
-|NAT网关|所有规格|无|1~5年|是|65%|
-|弹性公网EIP|普通BGP带宽，所有规格|无|1~5年|是|80%|
-|共享流量包|所有规格|无|不涉及|是|90%|
-|云企业网|跨境或非跨境带宽包：2 Mbps~20 Mbps|无|1~5年|是|75%|
-|无|1~11月|是|80%|
-|全球加速|-   实例：所有规格
--   基础或跨境带宽包：2 Mbps~20 Mbps
+## 区域划分
 
-|无|1~5年|是|75%|
-|无|1~11月|是|80%|
-|VPN网关|所有规格|无|1~5年|是|80%|
+一个通用流量包覆盖一个区域，一个区域包含一个或多个地域。区域与地域的关系如下表。
+
+|流量包区域|覆盖的地域|
+|:----|:----|
+|中国（内地）|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华东1（杭州）、华东2（上海）、华南1（深圳）|
+|中国（香港）|中国香港|
+|海外|澳大利亚（悉尼）、美国（弗吉尼亚）、美国（硅谷）、德国（法兰克福）、 新加坡、马来西亚（吉隆坡）、印度（孟买）、英国（伦敦）、印度尼西亚（雅加达）|
 
