--- a/intl.zh-CN/产品定价/计费说明.md
+++ b/intl.zh-CN/产品定价/计费说明.md
@@ -10,9 +10,9 @@
 
 |流量包区域|覆盖的地域|
 |:----|:----|
-|大陆通用|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华东1（杭州）、华东2（上海）、华南1（深圳）|
-|香港通用|中国香港|
-|海外通用|澳大利亚（悉尼）、美国（弗吉尼亚）、美国（硅谷）、德国（法兰克福）、 新加坡、马来西亚（吉隆坡）、印度（孟买）、英国（伦敦）|
+|中国（内地）|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华东1（杭州）、华东2（上海）、华南1（深圳）|
+|中国（香港）|中国香港|
+|海外|澳大利亚（悉尼）、美国（弗吉尼亚）、美国（硅谷）、德国（法兰克福）、 新加坡、马来西亚（吉隆坡）、印度（孟买）、英国（伦敦）、印度尼西亚（雅加达）|
 
 ## 流量包的套餐规格
 
