--- a/cn.zh-CN/用户指南/购买流量包.md
+++ b/cn.zh-CN/用户指南/购买流量包.md
@@ -13,6 +13,8 @@
 |亚太闲时|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华东1（杭州）、华东2（上海）、华南1（深圳）、中国香港、 亚太东南1（新加坡）、亚太东南3（吉隆坡）、亚太东南5（雅加达）、亚太南部1（孟买）不包含：亚太东南2（悉尼）、亚太东北1（东京） |
 |欧美全时|美国东部1（弗吉尼亚）、美国西部1（硅谷）、欧洲中部1（法兰克福）|
 
+## 购买共享流量包
+
 1.  登录[共享流量包购买页面](https://common-buy.aliyun.com/?spm=0.0.0.0.86FjwI&commodityCode=flowbag#/buy)。
 
 2.  在购买页面，根据以下信息配置流量包。
@@ -22,12 +24,12 @@
     |**有效期**|选择流量包的有效期。     -   **1个月**
     -   **6个月**
     -   **1年**
- 流量包到期后，不支持退款，到期后未用完的流量将清零，也不支持转移到其他流量包。 |
+流量包到期后，不支持退款，到期后未用完的流量将清零，也不支持转移到其他流量包。 |
     |**流量包规格**|选择流量包的规格。 流量包的有效期不同，可选择的流量包规格也不同，具体以购买页面为准。 |
     |**套餐**|选择流量包的套餐。     -   **亚太全时**：流量包覆盖亚太区域，在全天24小时可用。
     -   **欧美全时**：流量包覆盖欧美区域，在全天24小时可用。
     -   **亚太闲时**：流量包覆盖亚太区域，只在闲时时间（北京时间00:00AM至08:00AM）可用。
- **说明：** 如果闲时流量包和全时流量包同时可用，在闲时优先抵扣闲时流量包中的流量，非闲时抵扣全时流量包中的流量。 |
+**说明：** 如果闲时流量包和全时流量包同时可用，在闲时优先抵扣闲时流量包中的流量，非闲时抵扣全时流量包中的流量。 |
     |**购买数量**|选择购买流量包的数量。|
 
 3.  单击**立即购买**，完成支付。
