--- a/intl.zh-CN/用户指南/购买流量包.md
+++ b/intl.zh-CN/用户指南/购买流量包.md
@@ -13,6 +13,8 @@
 |中国（香港）|中国香港|
 |海外|澳大利亚（悉尼）、美国（弗吉尼亚）、美国（硅谷）、德国（法兰克福）、 新加坡、马来西亚（吉隆坡）、印度（孟买）、英国（伦敦）、印度尼西亚（雅加达）|
 
+## 购买共享流量包
+
 1.  登录[共享流量包购买页面](https://common-buy-intl.aliyun.com/?spm=a3c0i.63574.1167971.3.51cb4705k4PHIy&commodityCode=flowbag_intl&accounttraceid=87c33f86-1d75-451d-a5f8-0b67c0e0135e#/buy)。
 
 2.  在购买页面，根据以下信息配置流量包。
@@ -20,12 +22,12 @@
     |配置|说明|
     |--|--|
     |**流量包规格**|选择流量包的规格。 流量包的有效期不同，可选择的流量包规格也不同，具体以购买页面为准。 |
-    |**套餐**|选择流量包的套餐。     -   **大陆通用**：流量包覆盖中国内地区域。
-    -   **香港通用**：流量包覆盖中国香港区域。
-    -   **海外通用**：流量包覆盖海外区域。 |
+    |**套餐**|选择流量包的套餐。     -   **中国（内地）**：流量包覆盖中国内地区域。
+    -   **中国（香港）**：流量包覆盖中国香港区域。
+    -   **海外**：流量包覆盖海外区域。 |
     |**有效期**|选择流量包的有效期。     -   **1个月**
     -   **1年**
- 流量包到期后，不支持退款，到期后未用完的流量将清零，也不支持转移到其他流量包。 |
+流量包到期后，不支持退款，到期后未用完的流量将清零，也不支持转移到其他流量包。 |
     |**购买数量**|选择购买流量包的数量。|
 
 3.  单击**立即购买**，完成支付。
