--- a/intl.zh-CN/.md
+++ b/intl.zh-CN/.md
@@ -1,4 +1,4 @@
-# 什么是共享流量包
+# 什么是通用流量包
 
 通用流量包是一款流量套餐产品，使用方便，价格实惠。购买后通用流量包立刻生效，并自动抵扣按流量计费的云服务器ECS、弹性公网IP（EIP）、负载均衡（SLB）和共享带宽产生的IPv4普通流量（不包含EIP精品流量）费用，直到流量包用完或到期为止。
 
@@ -27,7 +27,7 @@
 
 |流量包区域|覆盖的地域|
 |:----|:----|
-|中国（内地）|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华东1（杭州）、华东2（上海）、华南1（深圳）|
+|中国（内地）|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华北6（乌兰察布 \)、华东1（杭州）、华东2（上海）、华南1（深圳）、华南2（河源）、华南3（广州）|
 |中国（香港）|中国香港|
-|海外|澳大利亚（悉尼）、美国（弗吉尼亚）、美国（硅谷）、德国（法兰克福）、 新加坡、马来西亚（吉隆坡）、印度（孟买）、英国（伦敦）、印度尼西亚（雅加达）|
+|海外|澳大利亚（悉尼）、美国（弗吉尼亚）、美国（硅谷）、德国（法兰克福）、 新加坡、马来西亚（吉隆坡）、印度（孟买）、英国（伦敦）、印度尼西亚（雅加达）、日本（东京）|
 
