--- a/cn.zh-CN/用户指南/购买流量包.md
+++ b/cn.zh-CN/用户指南/购买流量包.md
@@ -7,6 +7,12 @@
 -   每个账号最多可持有40个未到期的流量包，无法提升配额，请合理选择流量包规格。
 -   流量包套餐的区域不同，所覆盖的地域也不同。区域与地域的关系如下表所示。
 
+|流量包区域|覆盖的地域|
+|:----|:----|
+|亚太全时|华北1（青岛）、华北2（北京）、华北 2（阿里政务云1）、华北3（张家口）、华北5（呼和浩特）、华北6（乌兰察布 \)、华东1（杭州）、华东2（上海）、华南1（深圳）、华南2（河源）、华南3（广州）、西南1（成都）、中国香港、 亚太东南1（新加坡）、亚太东南3（吉隆坡）、亚太东南5（雅加达）、亚太南部1（孟买）|
+|亚太闲时|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华北6（乌兰察布 \)、华东1（杭州）、华东2（上海）、华南1（深圳）、华南2（河源）、华南3（广州）、中国香港、 亚太东南1（新加坡）、亚太东南3（吉隆坡）、亚太东南5（雅加达）、亚太南部1（孟买）不包含：亚太东南2（悉尼）、亚太东北1（东京） |
+|欧美全时|美国东部1（弗吉尼亚）、美国西部1（硅谷）、欧洲中部1（法兰克福）|
+
 ## 购买共享流量包
 
 1.  登录[共享流量包购买页面](https://common-buy.aliyun.com/?spm=0.0.0.0.86FjwI&commodityCode=flowbag#/buy)。
