--- a/intl.zh-CN/用户指南/购买流量包.md
+++ b/intl.zh-CN/用户指南/购买流量包.md
@@ -7,6 +7,12 @@
 -   每个账号最多可持有70个未到期的流量包，无法提升配额，请合理选择流量包规格。
 -   流量包套餐的区域不同，所覆盖的地域也不同。区域与地域的关系如下表所示。
 
+|流量包区域|覆盖的地域|
+|:----|:----|
+|中国（内地）|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华北6（乌兰察布 \)、华东1（杭州）、华东2（上海）、华南1（深圳）、华南2（河源）、华南3（广州）|
+|中国（香港）|中国香港|
+|海外|澳大利亚（悉尼）、美国（弗吉尼亚）、美国（硅谷）、德国（法兰克福）、 新加坡、马来西亚（吉隆坡）、印度（孟买）、英国（伦敦）、印度尼西亚（雅加达）、日本（东京）|
+
 ## 购买通用流量包
 
 1.  登录[通用流量包购买页面](https://common-buy-intl.aliyun.com/?spm=a3c0i.63574.1167971.3.51cb4705k4PHIy&commodityCode=flowbag_intl&accounttraceid=87c33f86-1d75-451d-a5f8-0b67c0e0135e#/buy)。
