--- a/cn.zh-CN/产品定价/计费说明.md
+++ b/cn.zh-CN/产品定价/计费说明.md
@@ -10,8 +10,8 @@
 
 |流量包区域|覆盖的地域|
 |:----|:----|
-|亚太全时|华北1（青岛）、华北2（北京）、华北 2（阿里政务云1）、华北3（张家口）、华北5（呼和浩特）、华东1（杭州）、华东2（上海）、华南1（深圳）、西南1（成都）、中国香港、 亚太东南1（新加坡）、亚太东南3（吉隆坡）、亚太东南5（雅加达）、亚太南部1（孟买）|
-|亚太闲时|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华东1（杭州）、华东2（上海）、华南1（深圳）、中国香港、 亚太东南1（新加坡）、亚太东南3（吉隆坡）、亚太东南5（雅加达）、亚太南部1（孟买）不包含：亚太东南2（悉尼）、亚太东北1（东京） |
+|亚太全时|华北1（青岛）、华北2（北京）、华北 2（阿里政务云1）、华北3（张家口）、华北5（呼和浩特）、华北6（乌兰察布 \)、华东1（杭州）、华东2（上海）、华南1（深圳）、华南2（河源）、华南3（广州）、西南1（成都）、中国香港、 亚太东南1（新加坡）、亚太东南3（吉隆坡）、亚太东南5（雅加达）、亚太南部1（孟买）|
+|亚太闲时|华北1（青岛）、华北2（北京）、华北3（张家口）、华北5（呼和浩特）、华北6（乌兰察布 \)、华东1（杭州）、华东2（上海）、华南1（深圳）、华南2（河源）、华南3（广州）、中国香港、 亚太东南1（新加坡）、亚太东南3（吉隆坡）、亚太东南5（雅加达）、亚太南部1（孟买）不包含：亚太东南2（悉尼）、亚太东北1（东京） |
 |欧美全时|美国东部1（弗吉尼亚）、美国西部1（硅谷）、欧洲中部1（法兰克福）|
 
 ## 共享流量包的套餐规格
